[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/devnull/PlayerBodyCopy.gd" type="Script" id=1]
[ext_resource path="res://scripts/cammy/FPSMonitor.gd" type="Script" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 0.4

[sub_resource type="SphereShape" id=2]
radius = 0.337365

[node name="Player" type="Spatial"]

[node name="PlayerBody" type="RigidBody" parent="." groups=["clockable"]]
collision_layer = 8
collision_mask = 9
mode = 2
contacts_reported = 4
contact_monitor = true
script = ExtResource( 1 )

[node name="RemoteTransform" type="RemoteTransform" parent="PlayerBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0 )
remote_path = NodePath("../../CameraHolder")
update_rotation = false
update_scale = false

[node name="CollisionShape" type="CollisionShape" parent="PlayerBody"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.927389, 0 )
shape = SubResource( 1 )

[node name="CheckGround" type="Area" parent="PlayerBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.272055, 0 )
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="PlayerBody/CheckGround"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0420006, 0 )
shape = SubResource( 2 )

[node name="CameraHolder" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0 )

[node name="Camera" type="Camera" parent="CameraHolder"]
current = true
far = 500.0

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="FPSBG" type="ColorRect" parent="HUD"]
margin_right = 50.0
margin_bottom = 13.0
mouse_filter = 2
color = Color( 1, 1, 1, 0.192157 )

[node name="FPSMonitor" type="Label" parent="HUD"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "FPS 100"
script = ExtResource( 2 )

[node name="Crosshair" type="Control" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="HUD/Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -0.5
margin_top = -2.5
margin_right = 0.5
margin_bottom = 2.5
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 1, 5 )
mouse_filter = 2

[node name="ColorRect2" type="ColorRect" parent="HUD/Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -2.5
margin_top = -0.5
margin_right = 2.5
margin_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 5, 1 )
mouse_filter = 2

[node name="Stats" type="VBoxContainer" parent="HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -260.0
margin_bottom = 40.0

[node name="HealthContainer" type="HBoxContainer" parent="HUD/Stats"]
margin_right = 260.0
margin_bottom = 20.0

[node name="ColorRect" type="ColorRect" parent="HUD/Stats/HealthContainer"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_vertical = 4

[node name="ColorRect2" type="ColorRect" parent="HUD/Stats/HealthContainer"]
margin_left = 24.0
margin_right = 44.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_vertical = 4

[node name="ColorRect3" type="ColorRect" parent="HUD/Stats/HealthContainer"]
margin_left = 48.0
margin_right = 68.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_vertical = 4

[node name="ColorRect4" type="ColorRect" parent="HUD/Stats/HealthContainer"]
margin_left = 72.0
margin_right = 92.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_vertical = 4

[node name="ColorRect5" type="ColorRect" parent="HUD/Stats/HealthContainer"]
margin_left = 96.0
margin_right = 116.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_vertical = 4

[node name="ColorRect6" type="ColorRect" parent="HUD/Stats/HealthContainer"]
margin_left = 120.0
margin_right = 140.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_vertical = 4

[node name="ColorRect7" type="ColorRect" parent="HUD/Stats/HealthContainer"]
margin_left = 144.0
margin_right = 164.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_vertical = 4

[node name="ColorRect8" type="ColorRect" parent="HUD/Stats/HealthContainer"]
margin_left = 168.0
margin_right = 188.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_vertical = 4

[node name="ColorRect9" type="ColorRect" parent="HUD/Stats/HealthContainer"]
margin_left = 192.0
margin_right = 212.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_vertical = 4

[node name="ColorRect10" type="ColorRect" parent="HUD/Stats/HealthContainer"]
margin_left = 216.0
margin_right = 236.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_vertical = 4

[node name="ColorRect11" type="ColorRect" parent="HUD/Stats/HealthContainer"]
margin_left = 240.0
margin_right = 260.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
size_flags_vertical = 4

[node name="TimeBG" type="ColorRect" parent="HUD/Stats"]
margin_left = 210.0
margin_top = 24.0
margin_right = 260.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 16 )
size_flags_horizontal = 8
color = Color( 0.341176, 0.341176, 0.341176, 0.607843 )

[node name="Time" type="Label" parent="HUD/Stats/TimeBG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -7.0
margin_right = 18.0
margin_bottom = 7.0
text = "00:00"

[connection signal="body_shape_entered" from="PlayerBody" to="PlayerBody" method="_on_PlayerBody_body_shape_entered"]
